# Life-Notes-APP

./: .gitignore  AGENTS.md  CONTEXT.md  README.md
.memory/: 2026-07-13-1500-SwiftUI首个纵向闭环.md  2026-07-14-2216-Xcode-Simulator验证.md  2026-07-15-0334-图片记录与逐图批注.md  2026-07-15-0613-语音录制转写与逐图语音批注.md  2026-07-15-0701-每日感受与重要日.md  2026-07-15-0740-月历与日期详情.md  2026-07-15-1353-随心日记生成编辑与历史.md  2026-07-15-1614-记录编辑删除与全文搜索.md  2026-07-15-1728-DeepSeek后端与iPhone联调.md  MEMORY.md
LifeNotes.xcodeproj/: project.pbxproj
LifeNotesTests/: AIBackendConfigurationTests.swift  AppModelDayStateTests.swift  AppModelPhotoTests.swift  AppModelVoiceTests.swift  BackendSettingsModelTests.swift  CalendarModelTests.swift  CalendarMonthTests.swift  CalendarPersistenceTests.swift  DayKeyTests.swift  DayStatePersistenceTests.swift  EntryLibraryModelTests.swift  FileAudioLibraryTests.swift  FileCaptureDraftStoreTests.swift  FilePhotoLibraryTests.swift  JournalDomainTests.swift  JournalModelTests.swift  JournalPersistenceTests.swift  LocalJournalGeneratorTests.swift  PhotoPersistenceIntegrationTests.swift  RemoteJournalGeneratorTests.swift  SwiftDataDayWorkspaceTests.swift  VoiceDomainTests.swift
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
backend/src/life_notes_backend/: __init__.py  app.py  config.py  middleware.py  models.py  provider.py  rate_limit.py
backend/tests/: conftest.py  test_api.py  test_config.py  test_middleware.py  test_models.py  test_provider.py  test_rate_limit.py
docs/: MACOS-START.md  PRODUCT.md  TECHNICAL-DESIGN.md
(+76 files in other folders)
