[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[project]
name = "life-notes-backend"
version = "0.1.0"
description = "Life Notes privacy-preserving AI journal generation API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1",
    "httpx>=0.27,<1",
    "pydantic>=2.5,<3",
    "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3,<9",
]

[tool.hatch.build.targets.wheel]
packages = ["src/life_notes_backend"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
